---
title: Auro Data Structure
---
erDiagram
    %% Core Reference Tables
    asset {
        TEXT id PK
        TEXT name
        TEXT symbol "Unique"
        TEXT kind "stablecoin, cryptocoin, nft"
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    fiat {
        INTEGER id PK
        TEXT name
        TEXT symbol "Unique"
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    sys_tracker {
        INTEGER id PK
        TEXT name
        TIMESTAMP last_updated_at
    }

    %% User Configuration
    user_settings {
        INTEGER id PK
        VARCHAR locale
        INTEGER default_fiat_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% Fiat On/Off Ramp Tracking
    fiat_ramp {
        TEXT id PK
        INTEGER fiat_id FK
        REAL fiat_amount
        DATE ramp_date
        VARCHAR via_exchange
        VARCHAR kind "deposit, withdraw"
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% Exchange Rates Data
    fiat_exchange_rate {
        INTEGER id PK
        INTEGER base_fiat_id FK
        DATE date
        TEXT rates "JSON"
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% Error Tracking for Missing Rates
    fiat_rate_missing {
        TEXT fiat_ramp_id PK, FK
        INTEGER base_fiat_id FK
        DATE date
        INTEGER error_count
        TEXT last_error_msg
        TIMESTAMP last_attempt_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% Relationships
    user_settings }o--|| fiat : "default currency"
    
    fiat_ramp }o--|| fiat : "currency used"
    
    fiat_exchange_rate }o--|| fiat : "base currency"
    
    fiat_rate_missing |o--|| fiat_ramp : "associated ramp tx"
    fiat_rate_missing }o--|| fiat : "target base currency"
